# elinor

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
correctness-test/: .gitignore  Cargo.toml  README.md  compare_with_trec_eval.py
correctness-test/src/: main.rs
elinor-cli/: Cargo.toml  README.md
elinor-cli/src/: lib.rs
elinor-cli/test-data/toy/: pred_3.jsonl
elinor-cli/test_data/: gold.jsonl  pred_1.jsonl  pred_2.jsonl  pred_3.csv
elinor-cli/test_data/statistical_tests/: Z.csv
elinor-commands/: Cargo.toml
elinor-commands/src/: lib.rs
elinor-convert/: Cargo.toml
elinor-convert/src/: main.rs
elinor-evaluate/: Cargo.toml
elinor-evaluate/src/: main.rs  tables.rs
elinor-py/: Cargo.toml  README.md  elinor.pyi  main.py  pyproject.toml
elinor-py/elinor/: __init__.py  _elinor.pyi  _lowlevel.pyi  elinor.pyi  statistical_tests.py
elinor-py/notebooks/: 1_overview.ipynb
elinor-py/src/: lib.rs
elinor-py/tests/: test_elinor.py
elinor-py/tests/statistical_tests/: test_bootstrap.py  test_randomized_tukey_hsd.py  test_student_t.py  test_student_t_test.py  test_tukey_hsd.py  test_two_way_anova_without_replication.py
evaluate/: Cargo.toml
evaluate/src/: main.rs
examples/: builder.rs  from_json.rs  from_jsonl.rs  from_trec.rs  paired_bootstrap_test.rs  randomized_tukey_hsd_test.rs  simple.rs  tukey_hsd_test.rs  two_way_anova_without_replication.rs
ireval-evaluate/: Cargo.toml
ireval-evaluate/src/: main.rs
scripts/: README.md  compare_with_trec_eval.py  compare_with_trec_eval.sh  prepare_trec_eval.sh  run_trec_eval.py
src/: errors.rs  json.rs  lib.rs  metrics.rs  qrels.rs  relevance.rs  run.rs  statistical_tests.rs  trec.rs
src/metrics/: average_precision.rs  bpref.rs  f1.rs  hits.rs  ndcg.rs  precision.rs  r_precision.rs  recall.rs  reciprocal_rank.rs  success.rs
src/statistical_tests/: bootstrap_test.rs  paired_bootstrap_test.rs  paired_student_t_test.rs  randomized_tukey_hsd_test.rs  stats.rs  student_t_test.rs  tukey_hsd_test.rs  two_way_anova_without_replication.rs
test-data/: README.md
test-data/sakai-book/: X.csv  Y.csv  Z.csv
test-data/sample/: gold.jsonl  pred_1.csv  pred_1.jsonl  pred_2.csv  pred_2.jsonl  pred_3.csv  pred_3.jsonl
test-data/toy/: pred_1.csv  pred_2.csv
test-data/trec-eval/: output.json  qrels.rel_level.jsonl  qrels.rel_level.output.json  qrels.test.jsonl  qrels.test.output.json  results.test.jsonl
test_data/: X.csv  Y.csv
