[package]
name = "ireval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "4.2.2"
regex = "1.10.6"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.87"
approx = "0.5.1"
maplit = "1.0.2"
rstest = "0.22.0"

[workspace]
members = ["ireval-evaluate"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]
