[package]
name = "elinor"
version = "0.1.0"
edition = "2021"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Evaluation Library in Information Retrieval"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/elinor"
repository = "https://github.com/kampersanda/elinor"
homepage = "https://github.com/kampersanda/elinor"
keywords = ["information-retrieval", "evaluation"]
categories = ["science"]
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "4.2.2"
regex = "1.10.6"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.87"
approx = "0.5.1"
maplit = "1.0.2"
rstest = "0.22.0"

[workspace]
members = ["elinor-evaluate"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]
