[package]
name = "elinor"
version = "0.3.2"
edition = "2021"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Evaluation Library in Information Retrieval"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/elinor"
repository = "https://github.com/kampersanda/elinor"
homepage = "https://github.com/kampersanda/elinor"
keywords = ["information", "retrieval", "evaluation"]
categories = ["science"]
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde", "ordered-float/serde"]

[dependencies]
ordered-float = "4.2.2"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.210", optional = true, features = ["derive"] }
statrs = "0.17.1"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.87"
approx = "0.5.1"
maplit = "1.0.2"
rstest = "0.22.0"
serde_json = "1.0.128"

[workspace]
members = ["elinor-cli", "elinor-py"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]
features = ["serde"]
default-features = false
