[package]
name = "elinor-evaluate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
big_s = "1.0.2"
clap = { version = "4.5.17", features = ["derive"] }
prettytable-rs = "0.10.0"
serde_json = "1.0.128"

[dependencies.elinor]
path = ".."
features = ["serde"]
default-features = false
