[package]
name = "elinor-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "elinor_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"

[dependencies.elinor]
version = "0.3.1"
path = ".."
features = ["serde"]
default-features = false
