[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "elinor-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["pydantic>=2.9.2"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "elinor._elinor"

[project.optional-dependencies]
test = ["pytest>=8.3.3", "pytest-cov[all]"]
